fixing index headers on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,8 +262,13 @@ body {
   .personal-info {
     font-size: 2.625em;
     margin-top: 50px;
-    margin-bottom: 50px;
-    width: 100%;
+    margin-bottom: 25px;
+    width: 90%;
+  }
+
+  .personal-info-h2 {
+    margin-top: 0;
+    width: 80%;
   }
 
   .navigation-li {
